# BayesianInferenceComparison

./: README.md
julia/: Manifest.toml  Project.toml  comparison.jl
python/: bayesian-python.py  numpyro_map.py  pyproject.toml
