[tool.poetry]
name = "Bayesian-comparison"
version = "0.1.0"
description = "Python vs Julia comparison of Bayesian inference"
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
license = "MIT"


# INSTALL ALL IN POETRY
# poetry env use /opt/homebrew/Caskroom/mambaforge/base/envs/metaDMG-tk/bin/python
# poetry install --extras all --with dev,lint,docs
# activate

[tool.poetry.dependencies]
python = ">=3.9,<3.11" # 3.11 due to numba
typer = {version = "^0.6.1", extras = ["all"]}
PyYAML = "^6.0"
scipy = "^1.9.0"
pandas = "^1.4.3"
pyarrow = "^9.0.0"
numpyro = "^0.10.0"
numba = "^0.56.0"
matplotlib = "^3.5.3"
jax = "^0.3.16"
ipykernel = "^6.15.1"
arviz = "^0.12.1"
iminuit = "^2.15.2"
ipywidgets = "^7.7.1"

[tool.poetry.group.dev] # poetry install --with dev,lint
optional = true
[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
ipykernel = "^6.8.0"
nbformat = "^5.1.3"
notebook = "^6.4.8"
MarkupSafe = "^2.1.1"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
use_parentheses = true
known_first_party = "metaDMG"
skip = ["docs/source/conf.py"]
